# ae

./: .env  .gitignore  .golangci.yaml  .goreleaser.yaml  Cargo.toml  Dockerfile.build  Dockerfile.goreleaser  LICENSE  Makefile  README.md  RELEASING.md  buf.gen.yaml  compile.go  go.mod  go.sum  go.work.sum  main.go
.github/: dependabot.yml
.github/workflows/: 001-go-ubuntu-latest-make-test-format-lint.yaml  001-go-ubuntu-latest-make-test-format.yaml  002-go-ubuntu-latest-make-lint.yaml  090-go-release-ubuntu-latest-go-releaser.yaml  README.md  build-test.yaml  ci-build-test.yaml  goreleaser.yaml  pr-build-test.yml
client/: .gitignore  .golangci.yaml  Makefile  README.md  client.go  client_test.go  go.mod
client/pkg/config/: auth.go  config.go  system.go
client/pkg/runtime/: runtime.go
cmd/: cmd.go  oci.go  oci_create.go  oci_delete.go  oci_kill.go  oci_start.go  oci_state.go  root.go
cmd/cells/: cells.go
cmd/discovery/: discover.go  discover_test.go
cmd/health/: check.go  check_test.go  health.go  health_test.go
cmd/observe/: observe.go  observe_test.go
cmd/oci/: oci.go
cmd/pki/: create.go  pki.go
cmd/root/: root.go
cmd/runtime/: runtime.go
cmd/test/: test.go
cmd/version/: version.go  version_test.go
docs/: aurae_pki.md  subcommands.md
opt/: opt.go
output/: output.go
pkg/cli/: output_format.go  output_format_test.go
pkg/client/: client.go
pkg/config/: auth.go  config.go  system.go
pkg/discovery/: discovery.go
pkg/health/: health.go
pkg/observe/: observe.go
pkg/pki/: pki.go  pki_test.go  util.go
src/: main.rs
(+30 files in other folders)
