[package]
name = "ae"
version = "0.1.0"
edition = "2021"
authors = [ "Ron Kuris <swcafe@gmail.com>", "The aurae authors <info@aurae.io>" ]
keywords = [ "aurae" ]
description = "Command line tool for aurae"
license-file = "LICENSE"
repository = "https://github.com/aurae-runtime/ae.git"
categories = [ "command-line-utilities" ]
readme = "README.md"

[dependencies]
anyhow = "1.0.68"
build-time = "0.1.2"
clap = { version = "4.0.32", features = ["derive", "wrap_help"] }
stderrlog = "0.5.4"
